--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,20 +1,17 @@
-﻿ // MainPage.xaml<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CameraBurstApp.MainPage">
-
     <Grid RowDefinitions="*, Auto, Auto">
         <!-- Camera Preview will go here -->
         <Grid x:Name="CameraPreviewContainer" Grid.Row="0" BackgroundColor="Black" />
-
         <!-- Capture Button -->
         <Button x:Name="CaptureButton" 
                 Text="Start Capture" 
                 Grid.Row="1"
                 Margin="20"
                 Clicked="OnCaptureButtonClicked" />
-
-        <!-- Subject Metadata Fields (for Bonus Objective) -->
+        <!-- Subject Metadata Fields -->
         <StackLayout Grid.Row="2" Margin="20,0,20,20">
             <Label Text="Subject Name:" />
             <Entry x:Name="SubjectNameEntry" Placeholder="Enter subject name" />
@@ -22,5 +19,4 @@
             <Entry x:Name="SubjectEmailEntry" Placeholder="Enter subject email" Keyboard="Email" />
         </StackLayout>
     </Grid>
-
 </ContentPage>
