--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -2,21 +2,33 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CameraBurstApp.MainPage">
+
     <Grid RowDefinitions="*, Auto, Auto">
-        <!-- Camera Preview will go here -->
-        <Grid x:Name="CameraPreviewContainer" Grid.Row="0" BackgroundColor="Black" />
+        <!-- Camera Preview Container - This should be an Android View -->
+        <Grid x:Name="CameraPreviewContainer" 
+            Grid.Row="0" 
+            BackgroundColor="Black"
+            HeightRequest="400"
+            MinimumHeightRequest="300"
+            VerticalOptions="FillAndExpand" /> 
+
         <!-- Capture Button -->
         <Button x:Name="CaptureButton" 
                 Text="Start Capture" 
                 Grid.Row="1"
                 Margin="20"
                 Clicked="OnCaptureButtonClicked" />
-        <!-- Subject Metadata Fields -->
+
+        <!-- Subject Metadata Fields (for Bonus Objective) -->
         <StackLayout Grid.Row="2" Margin="20,0,20,20">
             <Label Text="Subject Name:" />
-            <Entry x:Name="SubjectNameEntry" Placeholder="Enter subject name" />
+            <Entry x:Name="SubjectNameEntry" Placeholder="Enter subject name" TextChanged="SubjectNameEntry_TextChanged" />
             <Label Text="Subject Email:" />
             <Entry x:Name="SubjectEmailEntry" Placeholder="Enter subject email" Keyboard="Email" />
         </StackLayout>
+
+        
+        
     </Grid>
+
 </ContentPage>
